--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "heroku": "^7.47.12",
+    "heroku-cli": "^7.0.9",
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
