--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,6 @@
-NODE_MODE = production
+NODE_ENV = production
 PORT = 5000
-DB_URI = mongodb+srv://mancun07:1234@cluster0.op8yb.mongodb.net/FIRST_FULLSTACK?retryWrites=true&w=majority
+
 
 
 
